--- a/Complex JSON/Base.lproj/Main.storyboard
+++ b/Complex JSON/Base.lproj/Main.storyboard
@@ -1,28 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rxx-0h-zrQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rxx-0h-zrQ">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="ArialBold.ttf">
-            <string>Arial-BoldMT</string>
-        </array>
-        <array key="Kailasa.ttc">
-            <string>Kailasa</string>
-        </array>
-        <array key="KohinoorBangla.ttc">
-            <string>KohinoorBangla-Regular</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Message View Controller-->
         <scene sceneID="XJ2-BO-aRK">
@@ -2465,6 +2454,7 @@
                     <tabBarItem key="tabBarItem" title="Menu" image="menu" selectedImage="menu" id="EdG-SG-Eqm"/>
                     <connections>
                         <outlet property="arrivalConfirmationView" destination="cGJ-Aj-bmK" id="0Af-Nu-eiZ"/>
+                        <outlet property="arrivalImage" destination="Qd5-0Z-yJM" id="D9S-rg-Pcn"/>
                         <outlet property="checkListView" destination="CB0-U4-cdK" id="hbN-Q4-xIs"/>
                         <outlet property="counterLbl" destination="mLZ-oj-bVb" id="TqF-sF-wEo"/>
                         <outlet property="daysLbl" destination="9kO-Hf-XPT" id="JOI-rQ-KYP"/>
@@ -5171,7 +5161,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="TJk-hq-BvU">
-                                <rect key="frame" x="5" y="169" width="370" height="560"/>
+                                <rect key="frame" x="5" y="190.66666666666669" width="370" height="538.33333333333326"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zrp-Ek-muY">
                                     <size key="itemSize" width="105" height="82"/>
@@ -5181,23 +5171,23 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellConfirmation" id="rrC-YH-hlb" customClass="ArriceCollectionCell" customModule="Snapgroup" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="105" height="82"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="90" height="82"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="105" height="82"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="90" height="82"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dRX-IW-98S">
-                                                    <rect key="frame" x="5" y="0.0" width="95" height="82"/>
+                                                    <rect key="frame" x="7" y="0.0" width="77" height="82"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="transport icon" translatesAutoresizingMaskIntoConstraints="NO" id="A9V-lJ-02d">
-                                                            <rect key="frame" x="8" y="8" width="79" height="38"/>
+                                                            <rect key="frame" x="8" y="8" width="64" height="38"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="38" id="loB-gL-OFk"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="self arrive" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DME-Aj-tJZ">
-                                                            <rect key="frame" x="1" y="53" width="94" height="24"/>
+                                                            <rect key="frame" x="1" y="53" width="86" height="24"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
@@ -5208,18 +5198,18 @@
                                                     <constraints>
                                                         <constraint firstItem="A9V-lJ-02d" firstAttribute="top" secondItem="dRX-IW-98S" secondAttribute="top" constant="8" id="C8n-m1-mw7"/>
                                                         <constraint firstItem="A9V-lJ-02d" firstAttribute="leading" secondItem="dRX-IW-98S" secondAttribute="leading" constant="8" id="Zdh-pM-Vgw"/>
-                                                        <constraint firstAttribute="trailing" secondItem="A9V-lJ-02d" secondAttribute="trailing" constant="8" id="Zp1-tY-mLy"/>
+                                                        <constraint firstAttribute="trailing" secondItem="A9V-lJ-02d" secondAttribute="trailing" constant="5" id="Zp1-tY-mLy"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                         </view>
                                         <constraints>
                                             <constraint firstItem="dRX-IW-98S" firstAttribute="top" secondItem="rrC-YH-hlb" secondAttribute="top" id="RxT-fK-fbL"/>
-                                            <constraint firstItem="dRX-IW-98S" firstAttribute="leading" secondItem="rrC-YH-hlb" secondAttribute="leading" constant="5" id="e1R-m3-uhA"/>
-                                            <constraint firstAttribute="trailing" secondItem="dRX-IW-98S" secondAttribute="trailing" constant="5" id="e6e-tv-eDE"/>
+                                            <constraint firstItem="dRX-IW-98S" firstAttribute="leading" secondItem="rrC-YH-hlb" secondAttribute="leading" constant="7" id="e1R-m3-uhA"/>
+                                            <constraint firstAttribute="trailing" secondItem="dRX-IW-98S" secondAttribute="trailing" constant="6" id="e6e-tv-eDE"/>
                                             <constraint firstAttribute="bottom" secondItem="dRX-IW-98S" secondAttribute="bottom" id="tvi-1x-uot"/>
                                         </constraints>
-                                        <size key="customSize" width="105" height="82"/>
+                                        <size key="customSize" width="90" height="82"/>
                                         <connections>
                                             <outlet property="iconArrice" destination="A9V-lJ-02d" id="JN4-3X-yy7"/>
                                             <outlet property="stationName" destination="DME-Aj-tJZ" id="4gQ-Ea-zMM"/>
@@ -5232,22 +5222,35 @@
                                     <outlet property="delegate" destination="Xvy-0Y-PGq" id="7ED-nY-BRe"/>
                                 </connections>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cancel arrival confirmation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zt7-y3-Idu">
+                                <rect key="frame" x="5" y="154" width="363" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="363" id="M3u-KE-Nx7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <color key="textColor" name="Primary"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="sDI-Lc-Qcx" firstAttribute="top" secondItem="Oqc-0c-gvk" secondAttribute="top" constant="35" id="5Bh-Dz-1KQ"/>
                             <constraint firstItem="sDI-Lc-Qcx" firstAttribute="centerX" secondItem="MVn-A6-bfv" secondAttribute="centerX" id="8eA-aR-kmS"/>
-                            <constraint firstItem="TJk-hq-BvU" firstAttribute="top" secondItem="sDI-Lc-Qcx" secondAttribute="bottom" constant="25" id="BBY-hI-8Li"/>
                             <constraint firstItem="Qf1-da-Yjv" firstAttribute="top" secondItem="Oqc-0c-gvk" secondAttribute="top" constant="11" id="NGA-TU-uYI"/>
                             <constraint firstItem="TJk-hq-BvU" firstAttribute="trailing" secondItem="Oqc-0c-gvk" secondAttribute="trailing" id="Q0U-Ba-f23"/>
+                            <constraint firstItem="zt7-y3-Idu" firstAttribute="top" secondItem="sDI-Lc-Qcx" secondAttribute="bottom" constant="10" id="SAB-Qf-ged"/>
+                            <constraint firstItem="zt7-y3-Idu" firstAttribute="leading" secondItem="Oqc-0c-gvk" secondAttribute="leading" constant="5" id="Sbr-Wy-y36"/>
+                            <constraint firstItem="Oqc-0c-gvk" firstAttribute="trailing" secondItem="zt7-y3-Idu" secondAttribute="trailing" constant="7" id="b21-gG-cod"/>
                             <constraint firstItem="Qf1-da-Yjv" firstAttribute="leading" secondItem="Oqc-0c-gvk" secondAttribute="leading" constant="11" id="bo8-D9-23O"/>
                             <constraint firstItem="TJk-hq-BvU" firstAttribute="leading" secondItem="Oqc-0c-gvk" secondAttribute="leading" constant="5" id="lAh-d6-iTD"/>
+                            <constraint firstItem="TJk-hq-BvU" firstAttribute="top" secondItem="zt7-y3-Idu" secondAttribute="bottom" constant="19.666666666666657" id="oaV-bj-Nt9"/>
                             <constraint firstItem="TJk-hq-BvU" firstAttribute="bottom" secondItem="Oqc-0c-gvk" secondAttribute="bottom" id="tx1-7O-GJ6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Oqc-0c-gvk"/>
                     </view>
                     <connections>
                         <outlet property="arriveCollection" destination="TJk-hq-BvU" id="u2P-1T-WoZ"/>
+                        <outlet property="cancelAriiveConfirmation" destination="zt7-y3-Idu" id="0Ai-XB-wdP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Oxx-RU-2tp" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -7191,11 +7194,11 @@ AADr6g
         <namedColor name="Chat Me">
             <color red="0.80000001190000003" green="0.76499998570000005" blue="0.52899998429999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="Chat Me">
-            <color red="0.80000001190000003" green="0.76499998570000005" blue="0.52899998429999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="Chat Partner">
             <color red="0.93300002810000005" green="0.93300002810000005" blue="0.93300002810000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Primary">
+            <color red="0.75700002908706665" green="0.70599997043609619" blue="0.41600000858306885" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Primary">
             <color red="0.75700002908706665" green="0.70599997043609619" blue="0.41600000858306885" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
