--- a/Complex JSON/Base.lproj/Main.storyboard
+++ b/Complex JSON/Base.lproj/Main.storyboard
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rxx-0h-zrQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rxx-0h-zrQ">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="ArialBold.ttf">
+            <string>Arial-BoldMT</string>
+        </array>
+        <array key="Kailasa.ttc">
+            <string>Kailasa</string>
+        </array>
+        <array key="KohinoorBangla.ttc">
+            <string>KohinoorBangla-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Message View Controller-->
         <scene sceneID="XJ2-BO-aRK">
@@ -1013,16 +1024,16 @@
                                     <constraint firstItem="mKQ-ar-hEd" firstAttribute="leading" secondItem="Adp-Y2-i26" secondAttribute="trailing" constant="8" id="v7Q-1G-Dua"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="457" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="W9c-bR-NND">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="W9c-bR-NND">
                                 <rect key="frame" x="0.0" y="141" width="375" height="671"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="457" id="hI3-pS-tWL" customClass="CustomTableViewCell" customModule="Snapgroup" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="457"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="371" id="hI3-pS-tWL" customClass="CustomTableViewCell" customModule="Snapgroup" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="371"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hI3-pS-tWL" id="Uss-80-AEO">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="456.66666666666669"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="370.66666666666669"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nku-ga-kuC" userLabel="Instractions View">
@@ -1225,6 +1236,7 @@
                                             <constraints>
                                                 <constraint firstItem="ETx-2k-QBp" firstAttribute="top" secondItem="Bsz-0I-rnD" secondAttribute="bottom" constant="10" id="1Oz-ZI-X5P"/>
                                                 <constraint firstItem="6d6-ef-piX" firstAttribute="top" secondItem="nku-ga-kuC" secondAttribute="bottom" constant="2" id="1Vz-Bk-e6m"/>
+                                                <constraint firstAttribute="bottom" secondItem="ETx-2k-QBp" secondAttribute="bottom" constant="15.33" id="2Jt-dh-q0f"/>
                                                 <constraint firstAttribute="trailing" secondItem="ETx-2k-QBp" secondAttribute="trailing" constant="10" id="6aE-H6-bNu"/>
                                                 <constraint firstAttribute="trailing" secondItem="nku-ga-kuC" secondAttribute="trailing" constant="5" id="9lx-uj-7ld"/>
                                                 <constraint firstItem="5fg-Bf-SHT" firstAttribute="leading" secondItem="Uss-80-AEO" secondAttribute="leading" constant="15" id="9mW-x1-Txl"/>
@@ -1260,6 +1272,43 @@
                                             <outlet property="totalMembersLbl" destination="ES5-5l-sQv" id="f4e-Uu-caE"/>
                                             <outlet property="viewInfo" destination="nku-ga-kuC" id="Syi-Xq-ucC"/>
                                         </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchCell" rowHeight="79" id="C9x-x4-Zgj" customClass="SearchGroupViewCell" customModule="Snapgroup" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="399" width="375" height="79"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="C9x-x4-Zgj" id="R1f-7H-oSP">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="78.666666666666671"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aVh-pS-GQX">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="78.666666666666671"/>
+                                                    <subviews>
+                                                        <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search for group .." translatesAutoresizingMaskIntoConstraints="NO" id="sjy-pH-hOM" colorLabel="IBBuiltInLabel-Gray">
+                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="78.666666666666671"/>
+                                                            <color key="barTintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <textInputTraits key="textInputTraits"/>
+                                                            <scopeButtonTitles>
+                                                                <string>Title</string>
+                                                                <string>Title</string>
+                                                            </scopeButtonTitles>
+                                                        </searchBar>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="sjy-pH-hOM" firstAttribute="top" secondItem="aVh-pS-GQX" secondAttribute="top" id="FG5-oV-TYB"/>
+                                                        <constraint firstAttribute="trailing" secondItem="sjy-pH-hOM" secondAttribute="trailing" id="TFd-pY-bBr"/>
+                                                        <constraint firstAttribute="bottom" secondItem="sjy-pH-hOM" secondAttribute="bottom" id="myW-Kk-I89"/>
+                                                        <constraint firstItem="sjy-pH-hOM" firstAttribute="leading" secondItem="aVh-pS-GQX" secondAttribute="leading" id="nU4-pA-skr"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="aVh-pS-GQX" secondAttribute="bottom" id="cie-SH-vDn"/>
+                                                <constraint firstAttribute="trailing" secondItem="aVh-pS-GQX" secondAttribute="trailing" id="jOm-i0-teN"/>
+                                                <constraint firstItem="aVh-pS-GQX" firstAttribute="leading" secondItem="R1f-7H-oSP" secondAttribute="leading" id="riu-YE-eoL"/>
+                                                <constraint firstItem="aVh-pS-GQX" firstAttribute="top" secondItem="R1f-7H-oSP" secondAttribute="top" id="xGz-yA-nK7"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
